# ticketautomatisierung

./: .env.example  .gitignore  README.md  TicketPilot.spec  build_excel_macro.py  config.yaml  config_loader.py  create_excel_template.py  create_tickets.py  diagnose_jira_auth.py  excel_workbook.py  pyproject.toml  requirements-dev.txt  requirements.txt  ticket_schema.py  validators.py
.github/: copilot-instructions.md
.github/agents/: excel-jira-reviewer.agent.md
.github/instructions/: excel-vba.instructions.md  python.instructions.md  tests.instructions.md
.github/skills/excel-xlsm-automation/: SKILL.md
.github/skills/jira-data-center-api/: SKILL.md
.github/skills/jira-excel-sync/: SKILL.md
docs/: IMPLEMENTATION_STATUS.md  PROJECT_REQUIREMENTS.md  jira-integration.md  operations.md  security.md  user-guide.md
docs/adr/: 0001-local-desktop-architecture.md
scripts/: build_windows.ps1
src/ticketpilot/: __init__.py  __main__.py  bootstrap.py  facade.py
src/ticketpilot/ui/: app.py  (+10 more)
tests/: __init__.py  test_build_and_customizations.py  test_config_loader.py  test_create_tickets.py  test_excel_workbook.py  test_ticket_schema.py  test_validators.py
tests/gui/: test_ui_safety.py  test_ui_smoke.py
tests/integration/: test_bootstrap.py  test_facade.py
tests/unit/: test_application_preview.py  test_application_services.py  test_application_sync.py  test_domain_reporting.py  test_domain_schema.py  test_infrastructure_cache_adapters.py  test_infrastructure_config_security.py  test_infrastructure_credentials.py  test_infrastructure_gateways.py  test_infrastructure_persistence.py
(+30 files in other folders)
