[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketpilot"
version = "0.1.0"
description = "Sichere persönliche Windows-App für Jira-Ticketvorbereitung und -synchronisation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "TicketPilot" }]
dependencies = [
  "PySide6>=6.7,<7",
  "keyring>=25,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "pytest-qt>=4.4,<5",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "pyinstaller>=6.11,<7",
]

[project.gui-scripts]
ticketpilot = "ticketpilot.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",  # UI strings and Qt stylesheets are clearer without artificial wrapping.
  "UP042", # str+Enum intentionally preserves Python 3.11-compatible serialization.
  "SIM105", # Explicit fail-safe exception boundaries document write-safety semantics.
]

[tool.ruff.lint.per-file-ignores]
"src/ticketpilot/ui/models.py" = ["B008"] # Qt requires QModelIndex() override defaults.

[tool.mypy]
python_version = "3.11"
packages = ["ticketpilot"]
strict = true
warn_unreachable = true
exclude = ["build", "dist"]
